Squashed commit of the following:
commit e1c3222ecc8ba93af2c48f585277f70ba8623d90
Author: George Shuklin <george.shuklin@gmail.com>
Date:   Fri Mar 12 22:22:08 2021 +0200

    Move fade_in_out into lib, switched to u128 code.

commit 0266eac6fdba6d116eb44e983e66b17a0f6f132e
Author: George Shuklin <george.shuklin@gmail.com>
Date:   Fri Mar 12 22:14:36 2021 +0200

    noise_flakes, Factor.next128

commit b171605bcfb721b0deb2d2aa4363f4875db1202a
Author: George Shuklin <george.shuklin@gmail.com>
Date:   Thu Mar 11 23:57:59 2021 +0200

    128 simple code

commit f64c524d25ef200daef707b2c89fab36dede6dca
Author: George Shuklin <george.shuklin@gmail.com>
Date:   Thu Mar 11 23:11:37 2021 +0200

    Random benchmark

commit 114416d5eb39df05662d9b480e945e3cb4c46e7c
Author: George Shuklin <george.shuklin@gmail.com>
Date:   Tue Mar 9 22:52:25 2021 +0200

    state_machine_3

commit 3d8c0a1381518154b492831618efb92850dc5abf
Author: George Shuklin <george.shuklin@gmail.com>
Date:   Tue Mar 9 22:50:50 2021 +0200

    State machine 2

commit 3deefa9f428219f3ae645b9b03e73f6317a257b5
Author: George Shuklin <george.shuklin@gmail.com>
Date:   Tue Mar 9 22:47:51 2021 +0200

    State machine1

commit fa9d9db5acb09f6ff1e986b5a3529b6c42ab3e01
Author: George Shuklin <george.shuklin@gmail.com>
Date:   Tue Mar 9 22:41:20 2021 +0200

    Split1

commit a6e712d26a896352821da63f0b8b982e650224f8
Author: George Shuklin <george.shuklin@gmail.com>
Date:   Tue Mar 9 22:28:21 2021 +0200

    Saving simple random with struct

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,5 +4,21 @@ version = "0.1.0"
 authors = ["George Shuklin <george.shuklin@gmail.com>"]
 edition = "2018"
 
+[[bin]]
+name = "sdl_random"
+path = "src/main.rs"
+
+[lib]
+name = "lib"
+path = "src/lib.rs"
+
+[[bench]]
+name = "noise"
+harness = false
+
 [dependencies]
 sdl2 = {version="*"}
+bytemuck = "*"
+
+[dev-dependencies]
+criterion = "*"
